# ndx-aind-metadata

./: CHANGELOG.md  LICENSE.txt  NEXTSTEPS.md  README.md  pyproject.toml  requirements-min.txt
.github/workflows/: run_all_tests.yml
docs/source/: conf.py  conf_doc_autogen.py  format.rst  index.rst
spec/: ndx-aind-metadata.extensions.yaml  ndx-aind-metadata.namespace.yaml
src/pynwb/ndx_aind_metadata/: __init__.py  ndx_aind_metadata.py
src/pynwb/tests/: test_tetrodeseries.py
src/spec/: create_extension_spec.py
